css/style.css
html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    font-family: Arial, sans-serif;
    background-image: url('/assets/background.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    color: white;
    overflow-x: hidden;
}
.background-overlay {
    flex: 1;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 50px;
    background-color: rgba(26, 26, 26, 0.8);
    z-index: 0;
}

body {
    display: flex;
    flex-direction: column;
}

header {
    width: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
}

/* --- Navbar Desktop Layout--- */

.navbar {
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px 30px;
}

.navbar .logo {
    font-size: 1.5rem;
    color: #ffffff;
}

.navbar .logo span {
    color: #ff9900;
}

.navbar ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navbar ul li {
    list-style: none;
    margin: 0 5px;
    padding-left: 10px;
}

.navbar ul li a {
    color: #ffffff;
    text-decoration: none;
    padding: 8px 15px;
    border-radius: 15px;
    transition: background 0.3s;
}

.navbar ul li a.active, .navbar ul li a:hover {
    background: #434343;
}

.navbar ul li a.donate {
    background: #ff9900;
    padding: 15px 20px;
    border-radius: 23px;
    transition: transform 0.3s ease, background-color 0.3s ease;
}

.navbar ul li a.donate:hover {
    background-color: #434343;
    transform: scale(1.1); 
    color: #ff9900;
}

.hamburger-container {
    position: relative;
}

.hamburger {
    display: none;
    font-size: 30px;
    cursor: pointer;
    color: #ff9900;
}

.hero {
    flex: 1;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 50px;
    background-color: rgba(26, 26, 26, 0.8);
    gap: 30px; 
}

.hero h1 {
    font-size: 3.5rem;
    margin-bottom: 20px;
    line-height: 1.2;
}

.hero p {
    font-size: 2.4rem; 
    margin-bottom: 30px;
}

.hero a.btn {
    background-color: #ff9900;
    color: white;
    padding: 12px 25px;
    border-radius: 25px;
    text-decoration: none;
    font-size: 1.1rem;
    transition: transform 0.3s ease, background-color 0.3s ease; 
}

.hero a.btn:hover {
    background-color: #ff9900;
    transform: scale(1.1); 
}

.hero-content {
    max-width: 50%;
}

.hero-content h1 {
    font-size: 3.6rem;
    line-height: 1.2;
    margin-bottom: 20px;
}

.hero-content p {
    font-size: 1.6rem; 
    margin-bottom: 20px;
}

.hero-content .btn {
    display: inline-block;
    padding: 10px 20px;
    background-color: #ff9900;
    color: white;
    text-decoration: none;
    border-radius: 5px;
}

.hero-video {
    max-width: 45%; 
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-video video {
    width: 100%;
    height: auto;
    border-radius: 10px; 
    border:2px solid#ff9900;
    margin-top: 45px;
}
.hero-video video:hover {
    transform: scale(1.02);
    border: 2px solid white;
}
@media screen and (max-width: 820px) {
    html, body {
        margin: 0;
        padding: 0;
        height: 100%;
        font-family: Arial, sans-serif;
        background-image: url('/assets/mbackground.png');
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
        color: white;
        overflow-x: hidden;
    }
    
    .navbar .logo span {
        color: #00aeff;
    }
    header {
        width: 100%;
        background-color: rgb(2, 110, 182);
        box-shadow: 0 2px 4px rgba(0, 142, 236, 0.5);
        position: fixed;
        top: 0;
        left: 0;
        z-index: 1000;
    }
    .hero {
        flex-direction: column-reverse; 
        justify-content: space-between;
        align-items: center;
        padding: 50px;
    }

    .hero-content, .hero-video {
        max-width: 100%;
    }

    .hero-video {
        margin-top: 0px;
    }

    .hero-video video {
        width: 90%;
        height: auto;
        border-radius: 10px; 
        border:2px solid#0099ff;
        margin-top: 90px;
    }
    .hero-video video:hover {
        transform: scale(1.02);
        border: 3px solid rgb(5, 5, 5);
    }
    .hero a.btn {
        background-color: #0099ff;
        color: white;
        padding: 17px 30px;
        border-radius: 25px;
        text-decoration: none;
        font-size: 1.5rem;
        transition: transform 0.3s ease, background-color 0.3s ease; 
        margin-left: 33%;
    }
    
    .hero a.btn:hover {
        background-color: white;
        color: #0099ff;
        transform: scale(1.1); 
    }
    
    .hero-content {
        max-width: 100%;
        margin-top: -200px;
    }
    
    .hero-content h1 {
        color: #0099ff;
        font-size: 1.8rem;
        line-height: 1.1;
        margin-bottom: 10px;
        margin-top: 220px;
        text-align: center;
    }
    
    .hero-content p {
        font-size: 1.2rem; 
        margin-top: 40px;
        margin-bottom: 40px;
        text-align: center;
        max-width: 60%;
        color: white;
        margin-left: 140px;
    }
    
    .hero-content .btn {
        display: inline-block;
        padding: 10px 20px;
        background-color: #0099ff;
        color: white;
        text-decoration: none;
        border-radius: 5px;
        margin-left: 185px;
    }

    .hamburger {
        display: block;
        font-size: 30px;
        cursor: pointer;
        color: #f0f0f0;
        padding: 10px;
        transition: transform 0.3s ease;
        margin-left: -100px;
    }

    #navMenu {
        display: none;
        flex-direction: column;
        background-color: rgba(0, 153, 255, 0.863);
        position: absolute;
        top: 100%;
        left: -120px; 
        transform: translateX(-30%); 
        min-width: 200px;
        max-width: 70%; 
        z-index: 3;
        border-radius: 15px;
        box-shadow: 0 8px 16px rgb(255, 255, 255);
        overflow: hidden;
        transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out;
        opacity: 0; 
        max-height: 0; 
    }
    
    .hamburger-container:hover #navMenu,
    .hamburger-container:focus-within #navMenu {
        display: flex;
        max-height: 500px; 
        opacity: 1;
    }

    .navbar nav ul {
        flex-direction: column;
        width: 100%;
        padding: 0;
        margin: 0;
    }

    .navbar nav ul li {
        margin: 0;
        max-width: 100%;
        padding: 10px 10px;
        text-align: center;
        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
    }

    .navbar nav ul li:last-child {
        border-bottom: none;
    }

    .navbar nav ul li a {
        width: 100%;
        margin-left: -12px;
        display: block;
        color: #ffffff;
        text-decoration: none;
        font-weight: bold;
        transition: background-color 0.3s ease, color 0.3s ease;
    }

    .navbar nav ul li a:hover {
        background-color: rgba(255, 255, 255, 0.2);
        color: #0099ff; 
    }

    .navbar ul li a.active, .navbar ul li a:hover {
        background: #ffffff7c;
        color: #ffffff;
    }
    
    .navbar ul li a.donate {
        background: #2e2e2e;
        padding: 15px 20px;
        border-radius: 23px;
        transition: transform 0.3s ease, background-color 0.3s ease;
    }
    
    .navbar ul li a.donate:hover {
        background-color: #ffffff;
        transform: scale(1.1); 
        color: #0099ff;
    }
}

@media screen and (max-width: 430px) {
    .hero {
        flex-direction: column-reverse; 
        justify-content: space-between;
        align-items: center;
        padding: 50px;
        padding-top: 90px;
        padding-bottom: 130px;
    }

    .hero-content, .hero-video {
        max-width: 100%;
    }

    .hero-video {
        margin-top: 1px;;
    }
    
    .hero a.btn {
        background-color: #0099ff;
        color: white;
        padding: 17px 30px;
        border-radius: 25px;
        text-decoration: none;
        font-size: 0.8rem;
        transition: transform 0.3s ease, background-color 0.3s ease;
        width: 100px;
        display: flex;
        justify-content: center;
        align-items: center;
        margin-left: 25%;
    }

    .hero a.btn:hover {
        background-color: #0099ff;
        transform: scale(1.1);
    }

    .hero-content {
        max-width: 100%;
    }

    .hero-content h1 {
        font-size: 1.6rem;
        line-height: 1.1;
        margin-bottom: 10px; 
        text-align: center;
    }

    .hero-content p {
        font-size: 1rem;
        margin-top: 40px;
        margin-bottom: 40px;
        text-align: center;
        margin-left: 5px;
        max-width: 100%;
    }

    .hero-content .btn {
        display: inline-block;
        padding: 10px 20px;
        background-color: #0099ff;
        color: white;
        text-decoration: none;
        border-radius: 5px;
        margin-left: 185px;
    }
}

